讨论交流、 bug修复